--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                                         <img src="https://placehold.co/50x50/E0E7FF/4F46E5?text=R" alt="Rishav" class="w-12 h-12 rounded-full object-cover">
                                         <div class="ml-4">
                                             <p class="font-bold text-gray-900">Rishav</p>
-                                            <p class="text-gray-500">Picxele</p>
+                                            <p class="text-gray-500">CEO of Picxele</p>
                                         </div>
                                     </div>
                                 </div>
@@ -625,9 +625,12 @@
             <p class="text-gray-500">&copy; 2025 Ashutosh Sharma. All rights reserved.</p>
             <div class="flex justify-center space-x-6 mt-4">
                 <a href="mailto:ashutoshuix@gmail.com" class="text-gray-500 hover:text-indigo-600">Email</a>
-                <a href="#" class="text-gray-500 hover:text-indigo-600">LinkedIn</a>
-                <a href="#" class="text-gray-500 hover:text-indigo-600">Figma</a>
-                <a href="#" class="text-gray-500 hover:text-indigo-600">Behance</a>
+                <a href="https://www.linkedin.com/in/ashutoshs97/" class="text-gray-500 hover:text-indigo-600">LinkedIn</a>
+                <a href="https://www.figma.com/@ashutoshs97" class="text-gray-500 hover:text-indigo-600">Figma</a>
+                <a href="https://www.behance.net/ashutoshs97" class="text-gray-500 hover:text-indigo-600">Behance</a>
+                <a href="https://github.com/ashutoshs97/" class="text-gray-500 hover:text-indigo-600">Github</a>
+                <a href="https://bento.me/ashutoshs97" class="text-gray-500 hover:text-indigo-600">Bento</a>
+                <a href="https://dribbble.com/ashutoshs97" class="text-gray-500 hover:text-indigo-600">Dribbble</a>
             </div>
         </div>
     </footer>
